fix: do flex column on smaller screens

--- a/src/components/Quiz/styles.css
+++ b/src/components/Quiz/styles.css
@@ -5,7 +5,12 @@
   color: black;
   display: flex;
   gap: 1rem;
-  align-items: center;
+  flex-direction: column;
+
+  @media (min-width: 768px) {
+    align-items: center;
+    flex-direction: row;
+  }
 
   a {
     text-decoration: none;
